--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,9 @@
 <resources>
-    <string name="app_name">homework_2_resources</string>
+    <string name="app_name">homeworks from #7 etc.</string>
     <string name="dummy">text dummy</string>
     <string name="button_new_text">new text!</string>
+    <string name="remove">Remove</string>
+    <string name="content_hint">Content</string>
+    <string name="empty_post_error">Content must not be empty</string>
+    <string name="edit">Edit</string>
 </resources>
