hmwrk 7.2 - cancel edit button

--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -7,4 +7,5 @@
     <string name="content_hint">Пишите сюда</string>
     <string name="empty_post_error">Content must not be empty</string>
     <string name="edit">Edit</string>
+    <string name="editing_header">Редактирование...</string>
 </resources>
