--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="content_hint">Content</string>
     <string name="empty_post_error">Content must not be empty</string>
     <string name="edit">Edit</string>
+    <string name="editing_header">Editing...</string>
 </resources>
