--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -5,7 +5,10 @@
     <string name="button_new_text">новый текст!</string>
     <string name="remove">Удалить</string>
     <string name="content_hint">Пишите сюда</string>
-    <string name="empty_post_error">Content must not be empty</string>
-    <string name="edit">Edit</string>
+    <string name="empty_post_error">Контент должен быть заполнен</string>
+    <string name="edit">Редактировать</string>
     <string name="editing_header">Редактирование...</string>
+    <string name="menu_descr">Меню</string>
+    <string name="like_descr">Нравится</string>
+    <string name="shares_descr">Поделиться</string>
 </resources>
