--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
     <string name="empty_post_error">Content must not be empty</string>
     <string name="edit">Edit</string>
     <string name="editing_header">Editing...</string>
+    <string name="menu_descr">Menu</string>
+    <string name="like_descr">Like</string>
+    <string name="shares_descr">shares</string>
 </resources>
